add Facebook Link

--- a/contact.html
+++ b/contact.html
@@ -98,9 +98,9 @@
         <div class="contact-infos">
           <h2>Nos coordonnées</h2>
           <ul class="list">
-            <li>Email : <a href="mailto:contact@classcom.agency">contact@classcom.agency</a></li>
+            <li>Email : <a href="mailto:clvsscomagency@outlook.fr">clvsscomagency@outlook.fr</a></li>
             <li>Téléphone : <a href="tel:+2290192188436">+229 01 92 18 84 36</a></li>
-            <li>Réseaux : <a href="#">Facebook</a> · <a href="#">LinkedIn</a> · <a href="#">X</a></li>
+            <li>Réseaux : <a href="https://www.facebook.com/profile.php?id=61578841178207">Facebook</a> · <a href="#">LinkedIn</a> · <a href="#">X</a></li>
           </ul>
         </div>
       </div>
