--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <img src="assets/img/logo.svg" alt="" width="96" height="24" />
         <p class="muted">Boostez votre présence digitale avec des solutions sur mesure.</p>
         <div class="socials">
-          <a aria-label="Facebook" href="#" rel="noopener">FB</a>
+          <a aria-label="Facebook" href="https://www.facebook.com/profile.php?id=61578841178207" rel="noopener">FB</a>
           <a aria-label="LinkedIn" href="#" rel="noopener">IN</a>
           <a aria-label="X" href="#" rel="noopener">X</a>
         </div>
